--- a/src/app/modules/guide/components/activities/activities.component.html
+++ b/src/app/modules/guide/components/activities/activities.component.html
@@ -1,45 +1,5 @@
-<table class="table">
-  <thead class="black white-text">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">From</th>
-      <th scope="col">To</th>
-      <th scope="col">Tourist</th>
-      <th scope="col">Price</th>
-      <th scope="col">People</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>11 Aug'2020</td>
-      <td>20 Aug'2020</td>
-      <td>Arjun kumar singh</td>
-      <td>2000</td>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>11 Aug'2020</td>
-      <td>20 Aug'2020</td>
-      <td>Arjun kumar singh</td>
-      <td>2000</td>
-      <td>5</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>11 Aug'2020</td>
-      <td>20 Aug'2020</td>
-      <td>Arjun kumar singh</td>
-      <td>2000</td>
-      <td>5</td>
-    </tr>
-  </tbody>
-</table>
-
-<!-- /table -->
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-10">
 <!-- Section: Blog v.1 -->
 <section class="my-5">
 
@@ -71,7 +31,7 @@
     <div class="col-lg-7 to-right">
 
       <!-- Category -->
-      <a href="#!" class="green-text">
+      <a   class="green-text">
         <h6 class="font-weight-bold mb-3"><mdb-icon fas icon="utensils" class="pr-2"></mdb-icon>Food</h6>
       </a>
       <!-- Post title -->
