--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -1,5 +1,8 @@
 
-<table class="table">
+
+
+
+<!-- <table class="table">
     <thead class="black white-text">
       <tr>
         <th scope="col">#</th>
@@ -36,13 +39,13 @@
         <td>5</td>
       </tr>
     </tbody>
-  </table>
+  </table> -->
   
   
 
 
 <!-- /table -->
-<mdb-card class="booking-card">
+<!-- <mdb-card class="booking-card">
     <mdb-card-body>
         <mdb-card-title>
             <mdb-badge class="float-right amy-crisp-gradient" default="true">PERSONALIZED TOUR</mdb-badge>
@@ -91,13 +94,13 @@
                     </div>
                 </div>
 
-            </div>
+            </div> -->
             <!-- <div>Booking Date: March 25,2020</div> -->
-        </div>
+        <!-- </div>
 
     </mdb-card-body>
     <mdb-card-footer class="text-muted" style="height: 53px;">
         <a href="#!">View more</a>
         <button class="float-right footer-btn" style="margin: auto; " color="danger" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CANCEL BOOKING</b></button>
     </mdb-card-footer>
-</mdb-card>
+</mdb-card> -->
