edit guide profile

--- a/src/app/modules/guide/components/profile/profile.component.html
+++ b/src/app/modules/guide/components/profile/profile.component.html
@@ -1,3 +1,342 @@
-<p>
-  profile works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Edit Profile</h1>
+    <p class="lead">The content displying blow will be display to the tourists under your profile see all <a href="">Terms and conditions</a> to overlay
+    any conflicts and make your experience greate with <b>Voila</b></p>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-3">
+    <h4 style="color: rgb(3, 168, 244)" >Personal Info</h4> 
+  </div>
+  <div class="col-md-9">
+    <div class="row">
+      <div class="col-md-11">
+<h5 style="color: rgba(3, 169, 244, 0.7)" >Arjun Kumar Singh</h5>
+ </div>
+<div class="col-md-1 edit-btn">
+  <a (click)="editpersonal.show()" ><mdb-icon fas icon="edit"></mdb-icon></a>
+</div>
+     
+    </div>
+    
+    <div class="row">
+     
+      <div class="col-md-5">
+            <p> <b style="color: rgba(3, 169, 244, 0.7)">Date of birth :-</b>  03-05-2000</p>  
+      </div>
+       <div class="col-md-7">
+        <p> <b style="color: rgba(3, 169, 244, 0.7)">Aadhar Number :-</b>  7589-4564-8428</p> 
+      </div>
+    </div>
+      <p> <b style="color: rgba(3, 169, 244, 0.7)">Email :-</b> architjain808@gmail.com</p>
+      <p> <b style="color: rgba(3, 169, 244, 0.7)"> Phone :-</b> +91-8475848884 , +91-9658741236</p>
+      <div class="row">
+        <div class="col-md-6">
+          <p> <b style="color: rgba(3, 169, 244, 0.7)">State  :-</b>Uttrakhand </p>
+        </div>
+        <div class="col-md-6">
+          <p><b style="color: rgba(3, 169, 244, 0.7)">city :-</b>Rishikesh</p>
+        </div>
+      </div>
+      <p><b style="color: rgba(3, 169, 244, 0.7)">Address :-</b>100, Subhash nagar (bankandi) Rishikesh</p>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-3">
+    <h4 style="color: rgb(233, 30, 98)" >Experiences</h4>
+  </div>
+  <div class="col-md-9">
+    <div class="row">
+      <div class="col-md-11">
+         <div class="row">
+           <div class="col-md-6">
+            <p><b style="color: rgba(233, 30, 99, 0.7)">Work-place :-</b> Voila </p>
+           </div>
+           <div class="col-md-6">
+             <p><b style="color: rgba(233, 30, 99, 0.7)">Work-profile :-</b> Guide </p>
+           </div>
+         </div>  
+         <div class="row">
+          <div class="col-md-6">
+           <p><b style="color: rgba(233, 30, 99, 0.7)">Starting date :-</b> 12-05-2018 </p>
+          </div>
+          <div class="col-md-6">
+            <p><b style="color: rgba(233, 30, 99, 0.7)">Duration :-</b> 6 months </p>
+          </div>
+        </div>    
+         </div>
+      <div class="col-md-1">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-md-11">
+         <div class="row">
+           <div class="col-md-6">
+            <p><b style="color: rgba(233, 30, 99, 0.7)">Work-place :-</b> Voila </p>
+           </div>
+           <div class="col-md-6">
+             <p><b style="color: rgba(233, 30, 99, 0.7)">Work-profile :-</b> Guide </p>
+           </div>
+         </div>  
+         <div class="row">
+          <div class="col-md-6">
+           <p><b style="color: rgba(233, 30, 99, 0.7)">Starting date :-</b> 12-05-2018 </p>
+          </div>
+          <div class="col-md-6">
+            <p><b style="color: rgba(233, 30, 99, 0.7)">Duration :-</b> 6 months </p>
+          </div>
+        </div>    
+         </div>
+      <div class="col-md-1">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+  
+    <a (click)="editexperience.show()"><b style="color: rgb(233, 30, 98)" >+ Add more</b></a>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-3">
+    <h4 style="color: rgb(76, 175, 79)" >Languages</h4>
+  </div>
+  <div class="col-md-9">
+    <div class="row">
+      <div class="col-md-6">
+        <p><b style="color: rgba(76, 175, 80, 0.7)">Hindi</b></p>
+      </div>
+      <div class="col-md-6">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <p><b style="color: rgba(76, 175, 80, 0.7)">English</b></p>
+      </div>
+      <div class="col-md-6">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <p><b style="color: rgba(76, 175, 80, 0.7)">spanish</b></p>
+      </div>
+      <div class="col-md-6">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+    <a (click)="addlanguage.show()"> <b style="color: rgb(76, 175, 79)">+Add more</b> </a>
+  </div>
+</div>
+<hr>
+<div class="row">
+  <div class="col-md-3">
+    <h4 style="color: rgb(255, 153, 0) " >Intrests</h4>
+  </div>
+  <div class="col-md-9">
+    <div class="row">
+      <div class="col-md-6">
+        <p><b style="color: rgba(255, 152, 0, 0.7) ">Advanture</b></p>
+      </div>
+      <div class="col-md-6">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <p><b style="color: rgba(255, 152, 0, 0.7) ">Foodie</b></p>
+      </div>
+      <div class="col-md-6">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <p><b style="color: rgba(255, 152, 0, 0.7) ">biking</b></p>
+      </div>
+      <div class="col-md-6">
+        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+      </div>
+    </div>
+    <a (click)="addintrest.show()"><b style="color: rgb(255, 153, 0) ">+Add more</b></a>
+  </div>
+</div>
+<!-- edit profile modal -->
+<div mdbModal #editpersonal="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myBasicModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg  modal-dialog-scrollable" role="document">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: rgba(3, 169, 244, 0.7); color: white; ">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="editpersonal.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel"  >Personal Details</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-1">
+            <div class="md-form">
+              <input value="Mr." type="text" id="form6" class="form-control" mdbInput>
+              <label for="form6">Mr.</label>
+          </div>
+          </div>
+          <div class="col-md-6">
+          <div class="md-form">
+          <input value="Arjun kumar Singh" type="text" id="form6" class="form-control" mdbInput>
+          <label for="form6">Name</label>
+        </div>
+        </div> 
+        </div>
+               
+        <div class="row">
+     
+          <div class="col-md-5">
+            <div class="md-form">
+              <input value="03-05-2000" type="date" id="form6" class="form-control" mdbInput>
+              <label for="form6">D.O.B</label>
+            </div>  
+          </div>
+           <div class="col-md-7">
+            <div class="md-form form-sm">
+              <input type="text" id="form11" class="form-control" disabled>
+              <label for="form11" class="disabled">1214-9647-5462</label>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="md-form form-sm">
+            <input type="text" id="form11" class="form-control" disabled>
+            <label for="form11" class="disabled">architjain8082gmail.com</label>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="md-form">
+            <input value="+91-8475848884 , +91-9658741236" type="tel" id="form6" class="form-control" mdbInput>
+            <label for="form6">Phone Number</label>
+          </div>
+        </div>          
+          <div class="row">
+            <div class="col-md-6">
+              <div class="md-form">
+                <input mdbInput placeholder="Uttrakhand" type="text" id="form58" class="form-control">
+                <label for="form58">State</label>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="md-form">
+                <input mdbInput placeholder="Rishikesh" type="text" id="form58" class="form-control">
+                <label for="form58">City</label>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="md-form">
+              <input mdbInput placeholder="100,Subhash nagar (bankandi) Rishikesh" type="text" id="form58" class="form-control">
+              <label for="form58">Address</label>
+            </div>
+          </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="editpersonal.hide()" mdbWavesEffect>Close</button>
+        <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Save!</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- add experience modal -->
+<div mdbModal #editexperience="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myeditexperienceLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: rgba(233, 30, 99, 0.7); color: white; ">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="editexperience.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel">Add experience</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="md-form">
+              <input mdbInput type="text" id="form1" class="form-control">
+              <label for="form1" class="">Work-place</label>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="md-form">
+              <input mdbInput type="text" id="form1" class="form-control">
+              <label for="form1" class="">Work-profile</label>
+            </div>
+          </div>
+        </div>  
+        <div class="row">
+         <div class="col-md-6">
+          <div class="md-form">
+            <input mdbInput type="date" id="form1" class="form-control">
+            <label for="form1" class="">Starting Date</label>
+          </div>
+         </div>
+         <div class="col-md-6">
+          <div class="md-form">
+            <input mdbInput type="text" id="form1" class="form-control">
+            <label for="form1" class="">Duration</label>
+          </div>
+         </div>
+       </div>  
+      </div>
+      <div class="modal-footer">
+        <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="editexperience.hide()" mdbWavesEffect>Close</button>
+        <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Save!</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- add language modal -->
+<div mdbModal #addlanguage="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myaddlanguageLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header"  style="background-color: rgba(76, 175, 80, 0.7); color: white; ">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="addlanguage.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel">Add language</h4>
+      </div>
+      <div class="modal-body">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">language</label>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="addlanguage.hide()" mdbWavesEffect>Close</button>
+        <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Save!</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- add intrest modal -->
+<div mdbModal #addintrest="mdbModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myaddintrestLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: rgba(255, 152, 0, 0.7); color: white; ">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="addintrest.hide()">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title w-100" id="myModalLabel">Add Intrest</h4>
+      </div>
+      <div class="modal-body">
+        <div class="md-form">
+          <input mdbInput type="text" id="form1" class="form-control">
+          <label for="form1" class="">Intrest</label>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" mdbBtn color="secondary" class="waves-light" aria-label="Close" (click)="addintrest.hide()" mdbWavesEffect>Close</button>
+        <button type="button" mdbBtn color="primary" class="relative waves-light" mdbWavesEffect>Save!</button>
+      </div>
+    </div>
+  </div>
+</div>
