--- a/src/app/modules/tourists/pages/search-result-page/search-result-page.component.scss
+++ b/src/app/modules/tourists/pages/search-result-page/search-result-page.component.scss
@@ -38,6 +38,9 @@ mdb-card-text div {
 .collapse {
     margin-left:30px;
 }
+.filters{
+    border-right: 1px solid rgba(128, 128, 128, 0.342);
+}
 @media only screen and (max-width: 600px){
 
     .request-card{
