edit profile again

--- a/src/app/modules/guide/components/profile/profile.component.html
+++ b/src/app/modules/guide/components/profile/profile.component.html
@@ -268,7 +268,7 @@
           <div class="col-md-6">
             <div class="md-form">
               <input mdbInput type="text" id="form1" class="form-control">
-              <label for="form1" class="">Work-profile</label>
+              <label for="form1" class="">Work-Profile</label>
             </div>
           </div>
         </div>  
