--- a/src/app/shared/components/guide-profile/guide-profile.component.html
+++ b/src/app/shared/components/guide-profile/guide-profile.component.html
@@ -148,7 +148,7 @@
                                     </div> -->
 
                                     <div class="text-center mt-4">
-                                        <button class="btn btn-cyan mt-1">Request a personalized Tour<i class="fas fa-sign-in ml-1"></i></button>
+                                        <button class="btn btn-cyan mt-1">Request a personalized Tour</button>
                                     </div>
                                 </div>
 
@@ -171,21 +171,27 @@
                 <div class="d-flex flex-wrap my-4">
                     <div class="w-50 p-2">
                         <mdb-card>
-                            <!--Card image-->
-                            <mdb-card-img src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
+                            <div class="img-fav">
+                                <i class="far fa-heart fa-lg"></i>
+                                <!--Card image-->
+                                <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
+                                <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
+                                <h5><span class="badge badge-default font-weight-normal">Pune tour with Barkha Joshi</span></h5>
+                            </div>
                             <!--Card content-->
                             <mdb-card-body>
-
                                 <!--Title-->
                                 <mdb-card-title>
-                                    <h4>The Royal Heritage Tour</h4>
+                                    <h5><strong>The Royal Heritage Tour</strong></h5>
                                 </mdb-card-title>
 
                                 <!--Text-->
-                                <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's content.
+                                <mdb-card-text>
+                                    <div>Palaces, forts and museums. A complete introduction to the royal past.</div>
+                                    <div>&#x20b9;1000 pp &#8226; 4.5 hours &#8226; City Highlights Tour</div>
                                 </mdb-card-text>
 
-                                <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
+                                <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a> -->
                             </mdb-card-body>
                         </mdb-card>
                     </div>
