--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -1,22 +1,40 @@
 <div class="row" style="margin: 50px;">
-  <div class="col-md-12">
-    <!-- <div class="card">
+    <div class="col-md-12">
+
+
+
+
+
+
+        <!-- <div class="card">
       <div class="card-body">
         This is some text within a panel body.
       </div>
     </div><br> -->
 
-    <div class="row" >
-      <div class="col-md-3 col-sm-3">
+
+
+
+
+
         <div class="row">
-          <div class="col-md-12 text-center">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle"
-            alt="Responsive image">
-            <br>
-               <div class="guid-name">
-                 <b>Full Name</b>
-               </div>
-            <!-- <div class="btn-group" mdbDropdown style="margin-top: 10px;">
+            <div class="col-md-3 col-sm-3">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle" alt="Responsive image">
+                        <br>
+                        <div class="guid-name">
+                            <b>Full Name</b>
+                        </div>
+
+
+
+
+
+
+
+
+                        <!-- <div class="btn-group" mdbDropdown style="margin-top: 10px;">
               <button mdbDropdownToggle type="button" mdbBtn color="default" outline="true" class="dropdown-toggle waves-light"
                 mdbWavesEffect>
                 <b>Name</b>
@@ -28,37 +46,38 @@
                 <a class="dropdown-item" >Logout</a>
               </div>
             </div> -->
-            <br><br>
-          </div>
-        </div>
-      
-        <div class="row">
-          <div class="col-md-12">
-            
-            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-              <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" [routerLink]="['dashboard']" routerLinkActive="active"  role="tab"
-                aria-controls="v-pills-home" aria-selected="true">DashBoard</a>
-              <a class="nav-link" id="v-pills-bookings-tab" data-toggle="pill" [routerLink]="['bookings']" routerLinkActive="active"  role="tab"
-                aria-controls="v-pills-bookings" aria-selected="true">Bookings</a>
-              <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" [routerLink]="['messages']" routerLinkActive="active" role="tab"
-                aria-controls="v-pills-messages" aria-selected="false">Messages</a>
-              <a class="nav-link" id="v-pills-activities-tab" data-toggle="pill" [routerLink]="['activities']" routerLinkActive="active" role="tab"
-                aria-controls="v-pills-activities" aria-selected="false">Recent Activities</a>
-              <a class="nav-link" id="v-pills-deals-tab" data-toggle="pill" [routerLink]="['deals']" routerLinkActive="active" role="tab"
-                aria-controls="v-pills-deals" aria-selected="false">Your Deals</a>
-              <a class="nav-link" id="v-pills-edit-tab" data-toggle="pill" [routerLink]="['interests']" routerLinkActive="active" role="tab"
-                aria-controls="v-pills-edit" aria-selected="false">Edit Interests</a>
-              <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" [routerLink]="['editProfile']" routerLinkActive="active" role="tab"
-                aria-controls="v-pills-profile" aria-selected="false">Edit Profile</a>
+
+
+
+
+
+
+
+
+                        <br><br>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+
+                        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                            <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" [routerLink]="['dashboard']" routerLinkActive="active" role="tab" aria-controls="v-pills-home" aria-selected="true">DashBoard</a>
+                            <a class="nav-link" id="v-pills-bookings-tab" data-toggle="pill" [routerLink]="['bookings']" routerLinkActive="active" role="tab" aria-controls="v-pills-bookings" aria-selected="true">Bookings</a>
+                            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" [routerLink]="['messages']" routerLinkActive="active" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+                            <a class="nav-link" id="v-pills-activities-tab" data-toggle="pill" [routerLink]="['activities']" routerLinkActive="active" role="tab" aria-controls="v-pills-activities" aria-selected="false">Recent Activities</a>
+                            <a class="nav-link" id="v-pills-deals-tab" data-toggle="pill" [routerLink]="['deals']" routerLinkActive="active" role="tab" aria-controls="v-pills-deals" aria-selected="false">Your Deals</a>
+                            <a class="nav-link" id="v-pills-edit-tab" data-toggle="pill" [routerLink]="['interests']" routerLinkActive="active" role="tab" aria-controls="v-pills-edit" aria-selected="false">Edit Interests</a>
+                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" [routerLink]="['editProfile']" routerLinkActive="active" role="tab" aria-controls="v-pills-profile" aria-selected="false">Edit Profile</a>
+                        </div>
+
+                    </div>
+                </div>
             </div>
-            
-          </div>
-      </div>
+            <div class="col-md-9 col-sm-9">
+                <router-outlet></router-outlet>
+            </div>
+
+        </div>
     </div>
-      <div class="col-md-9 col-sm-9">
-        <router-outlet></router-outlet>
-      </div>
-    
-  </div>
-</div>
 </div>
